--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "copy-env": "cp .env.example .env"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/themes": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "encoding": "^0.1.13",
     "eslint": "^8.55.0",
     "firebase": "^10.6.0",
+    "framer-motion": "^10.16.14",
     "gpix": "^1.1.8",
     "next": "^13.4.19",
     "qrcode.react": "^3.1.0",
