feat(test) circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: The First Step
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
+      - run:
           name: Install Vercel CLI
           command: sudo npm install --global vercel@latest
       - run:
